fix paragraph spacing in cards on iphone

--- a/csss-site/src/events/tech_fair/static/tech_fair/2023/css/main.css
+++ b/csss-site/src/events/tech_fair/static/tech_fair/2023/css/main.css
@@ -712,6 +712,8 @@ li:before {
     letter-spacing: -2px; 
     font-family: "NotoSansGeorgian-Regular",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 
+    width: 60vw;
+
     color: #aaa; 
 }
 
